Fix alignment of labels on sign up form

--- a/app/assets/stylesheets/partials/_form.scss
+++ b/app/assets/stylesheets/partials/_form.scss
@@ -128,9 +128,6 @@ body form.alert {
   p {
     margin-bottom: 1em;
   }
-  .email label {
-    text-align: left;
-  }
 }
 
 form.donate {
